--- a/ResApiCore/ResApiCore/appsettings.json
+++ b/ResApiCore/ResApiCore/appsettings.json
@@ -2,6 +2,11 @@
   "MySqlConnection": {
     "MySqlConnectionString": "Server=localhost;Port=3306;Database=rest_with_asp_net_udemy;Uid=root;Pwd=;SslMode=none;"
   },
+  "TokenConfiguration": {
+    "Audience": "ExemploAudience",
+    "Issuer": "ExemploIssuer",
+    "Seconds": 1200
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
